2007-03-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/posshift-dialog.glade:
	* data/ui.xml:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_agents/__init__.py:
	* gaupol/gtk/_agents/position.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/posshift.py:
	Add position shift.

2007-03-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (browse_url):
	Quote url.

2007-03-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_actions/format.py:
	* gaupol/gtk/_actions/position.py:
	Fix imports.

2007-03-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_actions/edit.py:
	* gaupol/gtk/_actions/file.py:
	* gaupol/gtk/_actions/format.py:
	* gaupol/gtk/_actions/help.py:
	* gaupol/gtk/_actions/__init__.py:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_actions/projects.py:
	* gaupol/gtk/_actions/search.py:
	* gaupol/gtk/_actions/text.py:
	* gaupol/gtk/_actions/tools.py:
	* gaupol/gtk/_actions/view.py:
	Refactor action modules.

2007-03-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/edit.py:
	* gaupol/_agents/position.py:
	* gaupol/_agents/register.py:
	* gaupol/_agents/set.py:
	* gaupol/_agents/support.py:
	* gaupol/base/cons.py:
	* gaupol/base/__init__.py:
	* gaupol/base/_mutables.py:
	* gaupol/base/observable.py:
	* gaupol/cons.py:
	* gaupol/files/_subfile.py:
	* gaupol/gtk/_actions/edit.py:
	* gaupol/gtk/_actions/file.py:
	* gaupol/gtk/_actions/help.py:
	* gaupol/gtk/_actions/projects.py:
	* gaupol/gtk/_actions/text.py:
	* gaupol/gtk/_actions/tools.py:
	* gaupol/gtk/_agents/close.py:
	* gaupol/gtk/_agents/edit.py:
	* gaupol/gtk/_agents/menu.py:
	* gaupol/gtk/_agents/open.py:
	* gaupol/gtk/_agents/preview.py:
	* gaupol/gtk/_agents/save.py:
	* gaupol/gtk/_agents/update.py:
	* gaupol/gtk/_agents/view.py:
	* gaupol/gtk/app.py:
	* gaupol/gtk/cellrend/multiline.py:
	* gaupol/gtk/cellrend/time.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/cons.py:
	* gaupol/gtk/dialogs/about.py:
	* gaupol/gtk/dialogs/debug.py: